# LucidViz-Suite

./: .gitattributes  .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  LVS_Bug_Audit_Report_04042026.md  MATH_EXPLAINER.md  README.md  SECURITY.md  audit.md  audit03212026.md  nextsteps04032026.md
.github/workflows/: bench.yml  ci.yml  codeql.yml
assets/shaders/: axis.wgsl  edge.wgsl  postprocess.wgsl  shape_instanced.wgsl
crates/as-pipeline/: Cargo.toml
crates/as-pipeline/benches/: mds_bench.rs
crates/as-pipeline/fuzz/: Cargo.toml
crates/as-pipeline/fuzz/fuzz_targets/: fuzz_distance_matrix.rs
crates/as-pipeline/src/: centrality.rs  error.rs  lib.rs  normalize.rs  output.rs  pipeline.rs  procrustes.rs  structural_eq.rs  types.rs
crates/as-pipeline/src/mds/: classical.rs  force_directed.rs  landmark.rs  mod.rs  multilevel.rs  pivot.rs  smacof.rs  tsne.rs  umap.rs
crates/as-pipeline/tests/: mds_crossover.rs  proptest_procrustes.rs  weighted_procrustes.rs
crates/lv-app/: Cargo.toml  build.rs
crates/lv-app/src/: app_state.rs  demo.rs  main.rs  notifications.rs  prefs.rs  session.rs
crates/lv-audio/: Cargo.toml
crates/lv-audio/src/: graduated.rs  lib.rs  midi_engine.rs  scheduler.rs  soundbank.rs
crates/lv-data/: Cargo.toml
crates/lv-data/src/: analysis.rs  bridge.rs  error.rs  io_util.rs  json_io.rs  lib.rs  schema.rs  validation.rs  xlsx_reader.rs  xlsx_writer.rs
crates/lv-data/tests/: proptest_easing.rs
crates/lv-export/: Cargo.toml
crates/lv-export/src/: ffmpeg_pipe.rs  lib.rs  sequence.rs  snapshot.rs
crates/lv-gui/: Cargo.toml
crates/lv-gui/src/: as_panel.rs  bridge.rs  lib.rs  mf_panel.rs  state.rs  workspace.rs
crates/lv-gui/src/panels/: audio_panel.rs  cluster_filter.rs  export_panel.rs  file_loader.rs  lis_controls.rs  mod.rs  session_panel.rs  shape_overrides.rs
crates/lv-renderer/: Cargo.toml
crates/lv-renderer/benches/: renderer_bench.rs
crates/lv-renderer/src/: camera.rs  device.rs  edge_renderer.rs  frame_timer.rs  instanced.rs  lib.rs  lis.rs  pipelines.rs
crates/lv-renderer/src/shapes/: cube.rs  cylinder.rs  mod.rs  point.rs  pyramid.rs  sphere.rs  torus.rs
crates/lv-wasm/: Cargo.toml
crates/lv-wasm/src/: lib.rs
crates/lv-wasm/www/: index.html
crates/mf-pipeline/: Cargo.toml
crates/mf-pipeline/benches/: mf_bench.rs
crates/mf-pipeline/src/: centrality.rs  cooccurrence.rs  error.rs  graph.rs  ingest.rs  lib.rs  normalize.rs  output.rs  pipeline.rs  pmi.rs  stopwords.rs  svd_similarity.rs  tokenize.rs  types.rs
demo_output/: README.md
tests/fixtures/: golden_hashes.toml  sample_adjacency.csv  sample_corpus.txt
tests/integration/: as_pipeline_e2e.rs  full_render_cycle.rs  golden_hashes.toml  mf_pipeline_e2e.rs  round_trip_xlsx.rs
