[workspace]
resolver = "2"
members = [
    "crates/lv-app",
    "crates/lv-renderer",
    "crates/lv-gui",
    "crates/lv-data",
    "crates/as-pipeline",
    "crates/mf-pipeline",
    "crates/lv-audio",
    "crates/lv-export",
]

[workspace.package]
version     = "0.1.0"
edition     = "2021"
authors     = ["Lucid Visualization Suite Contributors"]
license     = "MIT OR Apache-2.0"
publish     = false

[workspace.dependencies]
# Serialization
serde          = { version = "1.0", features = ["derive"] }
serde_json     = "1.0"
toml           = "0.8"
rmp-serde      = "1.3"

# XLSX I/O
calamine        = "0.34"
rust_xlsxwriter = "0.94"

# Linear algebra
nalgebra = "0.33"
ndarray  = "0.16"   # pinned; 0.17 has breaking API changes vs nalgebra compat layer
rayon    = "1.10"

# Graph
petgraph = "0.6"

# Text / NLP
unicode-normalization = "0.1"
unicode-segmentation  = "1.0"
stop-words            = "0.10"

# Rendering / GUI
wgpu       = "27"
winit      = "0.30"
egui       = "0.33"
egui-wgpu  = "0.33"
egui-winit = "0.33"

# Audio
midir = "0.10"

# Utilities
image     = "0.25"
bytemuck  = { version = "1.24", features = ["derive"] }
log       = "0.4"
env_logger = "0.11"
anyhow    = "1.0"
thiserror = "2.0"
pollster  = "0.3"
sha2      = "0.10"
rfd       = "0.17"
rand      = { version = "0.8", features = ["small_rng"] }
getrandom = { version = "0.2" }
dirs-next = "2.0"
tempfile  = "3"

# Benchmarking
criterion = { version = "0.8", features = ["html_reports"] }

# WASM (declare at workspace level for version pinning; crates mark as optional)
wasm-bindgen = "0.2"
web-sys      = "0.3"
js-sys       = "0.3"
