[package]
name        = "lv-audio"
description = "Lucid Visualization Suite — MIDI audio engine (Beats + Graduated Beats)"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[features]
# Enable actual MIDI I/O via midir (requires libasound2-dev on Linux).
# Off by default so `cargo build --workspace` works without system ALSA headers.
midi = ["dep:midir"]

[dependencies]
lv-data.path      = "../lv-data"

anyhow.workspace    = true
log.workspace       = true
thiserror.workspace = true

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
midir = { workspace = true, optional = true }
