[package]
name        = "lv-export"
description = "Lucid Visualization Suite — snapshot PNG and video export"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[features]
default       = []
video-export  = []

[dependencies]
lv-data.path     = "../lv-data"
lv-renderer.path = "../lv-renderer"

image.workspace      = true
sha2.workspace       = true
anyhow.workspace     = true
log.workspace        = true
serde.workspace      = true
serde_json.workspace = true
bytemuck.workspace   = true
nalgebra.workspace   = true
wgpu.workspace       = true

