[package]
name        = "lv-renderer"
description = "Lucid Visualization — wgpu-based instanced GPU renderer"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[features]
headless = []

[dependencies]
lv-data.path = "../lv-data"

wgpu.workspace     = true
winit.workspace    = true
bytemuck.workspace = true
image.workspace    = true
anyhow.workspace   = true
rayon.workspace    = true
log.workspace      = true
nalgebra.workspace = true
serde.workspace    = true
sha2.workspace     = true
lru.workspace      = true
pollster.workspace = true
rand.workspace     = true

[dev-dependencies]
lv-data.path        = "../lv-data"
criterion.workspace = true
rand.workspace      = true
toml.workspace      = true

[[test]]
name = "full_render_cycle"
path = "../../tests/integration/full_render_cycle.rs"
required-features = ["headless"]

[[bench]]
name    = "renderer_bench"
harness = false

