[package]
name        = "lv-wasm"
description = "Lucid Visualization Suite — WebAssembly bindings for MF and AS pipelines"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
as-pipeline = { path = "../as-pipeline", default-features = false, features = ["wasm"] }
mf-pipeline = { path = "../mf-pipeline", default-features = false, features = ["wasm"] }
lv-data     = { path = "../lv-data", default-features = false }

serde.workspace      = true
serde_json.workspace = true
anyhow.workspace     = true
wasm-bindgen.workspace = true

[dev-dependencies]
wasm-bindgen-test = "0.3"
