[package]
name        = "mf-pipeline"
description = "MatrixForge — text ingestion, co-occurrence, PPMI, centrality, output"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish.workspace = true

[features]
default   = []
native-io = ["lv-data/native-io"]   # file I/O (ingest, output, pipeline); disable for wasm32
wasm      = ["dep:getrandom"]   # wasm32-unknown-unknown compatibility

[dependencies]
lv-data = { path = "../lv-data", default-features = false }

nalgebra.workspace              = true
unicode-normalization.workspace = true
unicode-segmentation.workspace  = true
stop-words.workspace            = true
petgraph.workspace              = true
rayon.workspace                 = true
serde.workspace                 = true
serde_json.workspace            = true
rust_xlsxwriter.workspace       = true
anyhow.workspace                = true
thiserror.workspace             = true
getrandom = { workspace = true, optional = true, features = ["wasm_js"] }

[dev-dependencies]
as-pipeline = { path = "../as-pipeline", features = ["native-io"] }
tempfile = "3"
calamine.workspace  = true
criterion.workspace = true
rand.workspace      = true

[[test]]
name = "mf_pipeline_e2e"
path = "../../tests/integration/mf_pipeline_e2e.rs"
required-features = ["native-io"]

[[bench]]
name    = "mf_bench"
harness = false
